# agent-fga

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
a2a_core/: __init__.py  a2a_client.py  a2a_server.py
adk_core/: __init__.py  agent_executor.py  base_agent.py
frontend/: package.json
frontend/app/: page.js  store.js
good_agent/: a2a_launcher.py  good_agent_adk.py  main.py
malicious_agent/: a2a_launcher.py  main.py  malicious_agent_adk.py
marketplace_backend/: Dockerfile  main.py  requirements.txt
marketplace_backend/prisma/: schema.prisma
mcp_server/: __init__.py  main.py  mcp_registry.py
openfga_model/: gmail_authz.fga
personal_agent/: a2a_launcher.py  main.py  personal_agent_adk.py
