[project]
name = "gmail-agent-marketplace"
version = "0.1.0"
description = "Gmail Agent Marketplace Demo - A secure multi-agent architecture using OpenFGA"
requires-python = ">=3.10"
dependencies = [
    "authlib>=1.6.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "prisma>=0.15.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
